--- a/StudyPortal/Views/Home/Index.cshtml
+++ b/StudyPortal/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Open Study Portal</h1>
+    <h3 style="color: darkcyan">Відкритий навчальний портал</h3>
+    <hr />
+    <br />
+    <br />
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
